welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:5: error: value droite is not a member of Unit
def jardiniere(){fleur(Color.RED);avance();avance();avance();avance();fleur(Color.CYAN);recule();recule();recule();recule();droite();avance();avance();avance();avance();gauche();fleur(Color.PINK);avance();avance();avance();avance();fleur(Color.GREEN);recule();recule();recule();recule()droite();} 
                                                                                                                                                                                                                                                                                              ^